--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+requests = "^2.26.0"
+coverage = "^6.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+requests-mock = "^1.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
