--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ authors = ["studio3104 <studio3104.com@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9"
 requests = "^2.26.0"
-coverage = "^6.1"
+TA-Lib = "^0.4.21"
+numpy = "^1.21.3"
 
 [tool.poetry.dev-dependencies]
+coverage = "^6.1"
 pytest = "^6.2.5"
 requests-mock = "^1.9.3"
 
