--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "3.9"
 requests = "^2.26.0"
 TA-Lib = "^0.4.21"
 numpy = "^1.21.3"
+matplotlib = "3.4.3"
+pandas = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.1"
