--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ TA-Lib = "^0.4.21"
 numpy = "^1.21.3"
 matplotlib = "3.4.3"
 pandas = "^1.3.4"
+pynamodb = "^5.1.0"
+websocket-client = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.1"
