--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,15 @@ authors = ["studio3104 <studio3104.com@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = ">=3.9,<3.11"
 requests = "^2.26.0"
 TA-Lib = "^0.4.21"
-numpy = "^1.21.3"
-matplotlib = "3.4.3"
+matplotlib = "^3.4.3"
+mplfinance = "0.12.7a17"
 pandas = "^1.3.4"
 pynamodb = "^5.1.0"
 websocket-client = "^1.2.1"
+numpy = "^1.21.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.1"
