--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,12 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 requests = "^2.26.0"
-TA-Lib = "^0.4.21"
-matplotlib = "^3.4.3"
-mplfinance = "0.12.7a17"
-pandas = "^1.3.4"
 pynamodb = "^5.1.0"
 websocket-client = "^1.2.1"
-numpy = "^1.21.3"
+mplfinance = "^0.12.7-alpha.17"
+pandas = "^1.3.4"
+numpy = "^1.21.4"
+TA-Lib = "^0.4.21"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.1"
