--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ mplfinance = "^0.12.7-alpha.17"
 pandas = "^1.3.4"
 numpy = "^1.21.4"
 TA-Lib = "^0.4.21"
+sklearn = "^0.0"
+kneed = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.1"
